--- a/Software Solution/j_Integration_UI/v2/pages/navBar.html
+++ b/Software Solution/j_Integration_UI/v2/pages/navBar.html
@@ -6,7 +6,7 @@
                   <a class="navbar-brand">
                       <img class="navImg" src="img/Icons/up-logo-long-200px.jpg" />
                   </a>
-                  <h5 class="navHeading">Neo Technical Assessment</h5>
+                  <h5 class="navHeading">Active Mode Content Based Authorship</h5>
                   <button type="button" class="navbar-toggle noBorder" data-toggle="collapse" data-target="#myNavbar">
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
