--- a/Software Solution/j_Integration_UI/v2/index.html
+++ b/Software Solution/j_Integration_UI/v2/index.html
@@ -54,11 +54,11 @@
     </div>
 
     <!-- Loading circle -->
-    <div id="loader" class="loader" ng-show="loading">
+    <!-- <div id="loader" class="loader" ng-show="loading">
       <div class="circle">
         <img src="img/site-load-circle1.gif" alt="site-load-circle.gif not found" id="loadCircle" />
       </div>
-    </div>
+    </div> -->
 
 </body>
 
