--- a/Software Solution/j_Integration_UI/v2/pages/startApp.html
+++ b/Software Solution/j_Integration_UI/v2/pages/startApp.html
@@ -2,23 +2,47 @@
     <div ng-include="url.templateUrl" style="display:inline;"></div>
     <h1 class="h2-style">Start App Page</h1>
     <div class="box">
-        <div class="midSection">
-
-            <br/>
-            <div  id="menu" style="height:70%; background-color:white;">
-                <div style="width:800px;margin:auto">
-                    <div class="row">
-                      <div class="col-sm-6 col-md-6 col-lg-6">
-                          <div ng-click="viewTodoMenu()" class="hBtnDiv">
-                              <img class="eightenyardarea" src="img/Icons/projects-icon-128px.png" />
-                              <h4 class="hBtnText">Start App</h4>
-                          </div>
-                      </div>
-                    </div>
-                </div>
+        <form class="form-horizontal midSection"  name="projectForm">
+          <div class="bs-docs-section">
+            <div>
+              <div class="section-icon">
+                  <i class="">
+                      <img class="img-responsive" src="img/icons/projects-icon-128px.png" />
+                  </i>
+              </div>
+              <h4 id="h5">Admin functions</h4>
+              <hr />
             </div>
+            <div class="innerSection">
+              <div ng-show="loader" style="position: relative">
+                    <div class="loading-icon">
+                        <span class="loader"><span class="loader-inner"></span></span>
+                        <label class="loadingText">Loading. Please be patient.</label>
+                    </div>
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+              </div>
+              <div ng-show="!loader">
+                <div class="tableButtons">
+                      <button type="button" class="btn btn-block btn-primary"><span class="glyphicon glyphicon-plus-sign"></span> Open Something</button>
+                </div>
+                <table class="table table-hover table-bordered table-striped animate-if" style="background-color:white;">
+                  <thead>
+                    <tr>
+                      <th colspan="3"> Authors </th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
 
-        </div>
+        </form>
+
     </div>
 
 
