--- a/Software Solution/j_Integration_UI/v2/index.html
+++ b/Software Solution/j_Integration_UI/v2/index.html
@@ -17,6 +17,9 @@
     <script src="import/underscore-min.js" type="text/javascript"></script>
     <script type="text/javascript" src="import/progressbar.js"></script>
     <script src="import/calendar-tpls.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-aria.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-messages.min.js"></script>
+
 
     <link rel="stylesheet" href="import/bootstrap-3.3.7-dist/css/bootstrap.min.css"></link>
     <link rel="stylesheet" href="import//io.select/select.css" />
@@ -24,6 +27,7 @@
     <link rel="stylesheet" href="css/w3.css" />
     <link rel="stylesheet" href="import/font-awesome.min.css">
     <link rel="stylesheet" href="css/mainStyle.css" />
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.css">
 
 
     <script src="import/angular-leaflet-directive.js"></script>
@@ -54,11 +58,11 @@
     </div>
 
     <!-- Loading circle -->
-    <!-- <div id="loader" class="loader" ng-show="loading">
+    <div id="loader" class="loader" ng-show="loading">
       <div class="circle">
         <img src="img/site-load-circle1.gif" alt="site-load-circle.gif not found" id="loadCircle" />
       </div>
-    </div> -->
+    </div>
 
 </body>
 
