--- a/Software Solution/j_Integration_UI/v2/pages/homePage.html
+++ b/Software Solution/j_Integration_UI/v2/pages/homePage.html
@@ -16,8 +16,8 @@
                       </div>
                         <div class="col-sm-6 col-md-6 col-lg-6">
                             <div ng-click="viewTodoMenu()" class="hBtnDiv">
-                                <img class="eightenyardarea" src="img/Icons/projects-icon-128px.png" />
-                                <h4 class="hBtnText">Todo List Menu</h4>
+                                <img class="eightenyardarea" src="img/Icons/user-setting.png" />
+                                <h4 class="hBtnText">Login</h4>
                             </div>
                         </div>
                     </div>
