--- a/Software Solution/j_Integration_UI/v2/pages/navBar.html
+++ b/Software Solution/j_Integration_UI/v2/pages/navBar.html
@@ -16,7 +16,7 @@
               <div class="collapse navbar-collapse" id="myNavbar">
 
                   <ul class="nav navbar-nav navbar-right">
-                      <li ng-click="home()" class="navPointer" ng-class="{ active: homeActive()}"><a> Home</a></li>
+                      <li ng-click="home()" class="navPointer" ng-class="{ active: homeActive()}"><a><span class="glyphicon glyphicon-home"></span> Home</a></li>
                   </ul>
               </div>
             </div>
